--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ html {
 body {
   font-family: 'Kumbh Sans', sans-serif;
   background-color: var(--dark-cyan);
+  background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
+  background-repeat: no-repeat, no-repeat;
+  background-position: right 50vw bottom 50vh, left 50vw top 50vh;
 }
 
 h1 {
@@ -43,5 +46,75 @@ h1 {
 
 .card {
   background-color: #fff;
+  width: 326px;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.card-header {
+  width: 100%;
+  display: block;
+}
+
+.card-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid #99999962;
+}
+
+.card-body-img {
+  border: 5px solid #fff;
+  border-radius: 50%;
+  margin-top: calc(-48px - 5px);
+  background-color: #fff;
+}
+
+.card-body-title {
+  margin-top: 2rem;
+  font-size: 1.8rem;
+}
+
+.card-body-title span {
+  color: var(--dark-gray);
+  font-weight: 400;
+  margin-left: 0.6rem;
+}
+
+.card-body-text {
+  color: var(--dark-gray);
+  font-size: 1.6rem;
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
+.card-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.card-footer-social {
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.card-footer-social h3 {
+  font-size: 1.3rem;
+}
+
+.card-footer-social p {
+  font-size: 1rem;
+  letter-spacing: 1px;
 }
 /*# sourceMappingURL=style.css.map */
